
Before:

  nREPL server started on port 61149 on host 127.0.0.1

After:
  nREPL server started on port 61149 on host 127.0.0.1 - nrepl://127.0.0.1:61149

This nREPL URL is automatically converted to an hyperlink in the Console View. 
'''And even more: the first time a nREPL link appears in a Console View, Counterclockwise automatically opens a REPL View for it!'''

=== Leiningen classpath more permissive

Resolving leiningen classpath is now more permissive

==== Overlapping source paths are allowed
Overlapping `:source-paths`, `:resource-paths`,  `:test-paths` and/or `:java-source-paths` are accepted.
Counterclockwise resolves the conflict by adding the required exclusions to its source classpath entries.

For instance, if you have declared (explicitly or implicitly) both `resources`  and `resources/public` as resource paths,
Counterclockwise will create 2 source path entries: 

- one for `resources/public`, 
- and one for `resources`, with an exclusion filter for its `public` subfolder

==== Missing source paths are not signaled as errors anymore
All paths are marked as 'optional' so that if folders for these paths are missing, no exception is reported by Eclipse.


== Changes between Counterclockwise 0.20.0 and 0.21.0

`0.21.0` released on January 9, 2014

=== General purpose Leiningen task invoker

Addition of a new command, kbd:[Alt+L L] for launching a popup allowing to enter an arbitry leiningen command.

It allows you to launch arbitrary leiningen tasks from within Eclipse.

See Documentation: http://doc.ccw-ide.org/documentation.html#_generic_command_launcher

=== New Clojure Project Wizard ===
