@@ -138,12 +138,15 @@ ccw.LEININGEN_CONTAINER=Leiningen Dependencies
 ccw.leiningen.category=Leiningen Commands
 ccw.leiningen.command.update-dependencies.name=Update dependencies
 ccw.leiningen.command.update-dependencies.description=Update dependencies
-ccw.leiningen.command.generic-launch.name=Call Leiningen
-ccw.leiningen.command.generic-launch.description=Call Leiningen
+ccw.leiningen.command.generic-launch.name=Generic Leiningen Command Line
+ccw.leiningen.command.generic-launch.description=Launch a popup to run arbitrary Leiningen commands
 ccw.leiningen.command.add-leiningen-nature.name=Convert to Leiningen Project
 ccw.leiningen.command.add-leiningen-nature.description=Convert to Leiningen Project
 ccw.leiningen.command.reset-project-classpath.name=Reset project configuration
 ccw.leiningen.command.reset-project-classpath.description=Reset project configuration
 ccw.leiningen.popup.menu.label=Leiningen
 ccw.leiningen.problemmarker.classpathcontainer=Leiningen Classpath Container
+
+ccw.leiningen.command.launch-headless-repl.name=Launch Headless REPL for the project
+ccw.leiningen.command.launch-headless-repl.description=Launch a Headless REPL for the project through Leiningen
 
